crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_render_stats_option_toggles_stats_summary__with_stats.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/functions/cli.md =====
# Function: cli()

Run.

## Signature

```ts
export function cli(): void
```
===== default/index.md =====
# default

_1 symbols · 1 functions_

## Functions

- [cli](./functions/cli.md) - Run.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 functions_

## Modules

- [default](./default/index.md)
