crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_render_stats_option_toggles_stats_summary__without_stats.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/functions/cli.md =====
# Function: cli()

Run.

## Signature

```ts
export function cli(): void
```
===== default/index.md =====
# default

## Functions

- [cli](./functions/cli.md) - Run.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

## Modules

- [default](./default/index.md)
